--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,5 @@
 name: log_controller
+version: 0.0.1-pre
 description: A polymer element which lets you control the global logging configuration.
 dependencies:
     polymer: ">=0.12.0-dev <0.13.0"
