--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: log_controller
 version: 0.0.1-pre
 description: A polymer element which lets you control the global logging configuration.
 dependencies:
-    polymer: ">=0.12.0-dev <0.13.0"
+    polymer: ">=0.12.0 <0.13.0"
     core_elements: ">=0.0.6 <0.2.0"
 transformers:
 - polymer:
