--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,10 @@
 name: log_controller
-version: 0.0.1-pre+1
+version: 0.0.1-pre+2
 description: A polymer element which lets you control the global logging configuration.
 dependencies:
-    polymer: ">=0.12.0 <0.13.0"
-    core_elements: ">=0.0.6 <0.2.0"
+    logging: ">=0.9.2"
+    polymer: ">=0.12.0 <0.14.0"
+    core_elements: ">=0.0.6 <0.3.0"
 transformers:
 - polymer:
     entry_points: example/index.html
